code/product-service/statefulset/virtualservice.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: product-service
  namespace: release
spec:
  hosts:
  - "product.devops.id"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: product-service.release.svc.cluster.local
